# bookstore

./: .env.dev  .gitignore  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yaml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/tests/test_viewsets.py/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: admin.py  apps.py  factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: __init__.py  test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  product_viewset.py
